--- a/package.json
+++ b/package.json
@@ -21,15 +21,12 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "clean-cache": "^1.0.2",
-    "cors": "^2.8.5",
-    "date-fns": "^2.9.0",
     "dotenv": "^8.1.0",
-    "dotenv-safe": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.9.1",
     "mysql2": "^1.7.0",
     "sequelize": "^5.19.6",
-    "sequelize-cli": "^5.5.1",
-    "winston": "^3.2.1"
+    "sequelize-cli": "^5.5.1"
   }
 }
