--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
   "dependencies": {
     "@hapi/joi": "^17.1.0",
     "bcrypt": "^3.0.6",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "clean-cache": "^1.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "mysql2": "^1.7.0",
     "sequelize": "^5.19.6",
-    "cors": "^2.8.5",
     "sequelize-cli": "^5.5.1"
   }
 }
