--- a/.sequelizerc
+++ b/.sequelizerc
@@ -3,4 +3,5 @@ const path = require('path');
 module.exports = {
     'models-path': path.resolve('dao', 'connection.js'),
     'migrations-path': path.resolve('database', 'migrations'),
+    'seeders-path': path.resolve('database', 'seeders')
 }
