--- a/.env-exemple
+++ b/.env-exemple
@@ -1,7 +1,7 @@
 DB_NAME=simpleERP
-DB_USER=root
-DB_PASS=123 
-DB_HOSTNAME=172.24.02
-DB_DIALECT=mysql
-DB_PORT=3306
+DB_USER=postgres
+DB_PASS=123
+DB_HOSTNAME=127.0.0.1
+DB_DIALECT=postgres
+DB_PORT=5432
 ENVIROMENT=dev
