--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "mysql2": "^1.7.0",
+    "pg": "^8.1.0",
+    "pg-hstore": "^2.3.3",
     "sequelize": "^5.19.6",
     "sequelize-cli": "^5.5.1"
   }
