--- a/.env-exemple
+++ b/.env-exemple
@@ -1,7 +1,7 @@
 DB_NAME=simpleERP
 DB_USER=postgres
 DB_PASS=123
-DB_HOSTNAME=127.0.0.1
+DB_HOSTNAME=db
 DB_DIALECT=postgres
 DB_PORT=5432
-ENVIROMENT=devnpm
+ENVIROMENT=dev
